syntax = "proto3";

package shared_proto.v1;

message ErrorDetails {
  string code = 1;
  string message = 2;
  bool retryable = 3;
  string details_json = 4;
}
